--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	</head><body>
 			<div class="container">
-<div class="grid-div" id="main-div">
+<div id="main-div">
 
 	<!--
 		canvas1 similar shirt riffage
@@ -14,11 +14,10 @@
 	-->
 
 <canvas id="canvas1" width="100%" height="250px" style="border:1px solid #c3c3c3;"></canvas>
+<!-- /canvas for similar shirt riff -->
 
-<p>Jeremy out of town sunday morning to thursday
-morning. 7/25 - 7/29</p><hr>
-
-      <div class="accent-div">
+<!-- calendar-->
+<div class="accent-div">
     <h3>calendar in reverse chronological order</h3>
   <div class="band-calendar">
 <div>October 30th</div>
@@ -58,9 +57,35 @@ morning. 7/25 - 7/29</p><hr>
   </div><!-- div.band-calendar -->
     </div><!-- div.accent-div -->
 
-    <div class="accent-div">
+
+<p>Jeremy out of town sunday morning to thursday
+morning. 7/25 - 7/29</p><hr>
+
+                    <div class="accent-div">
+
+  <h3>__ setlist for 7/30 and 7/31 as of 7/29/2021</h3>
+  <div class="set-list">
+<div>1 similar</div>                          <div></div>
+<div>2 halstep trills</div>                   <div></div>
+<div>3 circles</div>                          <div></div>
+<div>4 jester</div>                           <div></div>
+<div>5 wildcard</div>                         <div></div>
+<div>6 supercloud</div>                       <div></div>
+<div>7 grayscale</div>                        <div></div>
+<div>8 heaven (skit) we become dinosaurs</div><div></div>
+<div>9 glass castles</div>                    <div></div>
+<div>10 shadow danve</div>                    <div></div>
+<div>11 sillyclone</div>                      <div></div>
+<div>12 keep me hangin</div>                  <div></div>
+<div>13 little haze</div>                     <div></div>
+<div>14 long way down</div>                   <div></div>
+  </div>
+</div><!-- div.set-list -->
+
+
   <h3>__ old setlist for 7/30 and 7/31</h3>
-<ul><li>Moonchild*</li>
+    <ul>
+<li>Moonchild*</li>
 <li>Halfstep trills</li>
 <li>The jester</li>
 <li>Wild card</li>
@@ -74,33 +99,10 @@ morning. 7/25 - 7/29</p><hr>
 <li>Keep me Hangin On*</li>
 <li>Little haze</li>
 <br>
-<li>Long way down</li></ul>
+<li>Long way down</li>
+  </ul>
 
-  <h3>__ setlist as of 7/29/2021</h3>
-  <div class="set-list">
-<div>1 similar</div><div></div>
-<div>2 halstep trills</div><div></div>
-<div>3 circles</div><div></div>
-<div>4 jester</div><div></div>
-<div>5 wildcard</div><div></div>
-<div>6 supercloud</div><div></div>
-<div>7 grayscale</div><div></div>
-<div>8 heaven (skit) we become dinosaurs</div><div></div>
-<div>9 glass castles</div><div></div>
-<div>10 shadow danve</div><div></div>
-<div>11 sillyclone</div><div></div>
-<div>12 keep me hangin</div><div></div>
-<div>13 little haze</div><div></div>
-<div>14 long way down</div><div></div>
-  </div>
-
-
-</div><!-- div.set-list -->
-
-
-
-
-    </div><!-- div.accent-div -->
+                    </div><!-- div.accent-div -->
 
     <div class="accent-div">
 <h3>__setlist for shedfest</h3>
@@ -116,7 +118,7 @@ morning. 7/25 - 7/29</p><hr>
 <div>little haze      </div><div>E dorian     </div>
 <div>long way down    </div><div>Dm           </div>
 </div><!-- div.set-list -->
-</div><!-- div.accent-div -->
+    </div><!-- div.accent-div -->
 
 Psalm 23<br>
 Luther Bibel 1545<br>
@@ -193,11 +195,11 @@ last sail                      A, F#m dorian<br>
 <br>
 you are beautiful
 
-        </div><!-- div.grid-div#main-div -->
+        </div><!-- div#main-div -->
         
 
 
-        <div class="grid-div" id="charts-div">
+        <div id="charts-div">
 
 Here I will add charts for all songs:
 <ul>
@@ -216,21 +218,37 @@ Here I will add charts for all songs:
 	the band's mastery of each song.</h3>
 	  <!-- title key jeremy aaron sean ty -->
 <div>title</div>          <div>key</div><div>band</div><div>jeremy</div><div>aaron</div><div>sean</div><div>ty</div>
+
 <div>halfstep trills</div><div>G</div>  <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+
 <div>Similar Shirt</div>  <div>A</div>  <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+
 <div>Supercloud</div>     <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+
 <div>Little Haze</div>    <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+
 <div>Keep Me Hangin</div> <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+
 <div>Circles</div>        <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+
 <div>Jester</div>         <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+
 <div>Grayscale</div>      <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+
 <div>Heaven and</div>     <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+
 <div>Glass Castles</div>  <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+
 <div>Shadowdance</div>    <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+
 <div>Sillyclone</div>     <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+
 <div>Long Way Down</div>  <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+
 <div>Jester</div>         <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+
 <div>Jester</div>         <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
+
 <div>Jester</div>         <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
 
 
@@ -259,7 +277,7 @@ Here I will add charts for all songs:
 
 
 
-      </div><!-- div.grid-div#charts-div -->
+      </div><!-- div#charts-div -->
             </div><!-- div.container -->
 
 
@@ -277,6 +295,7 @@ Here I will add charts for all songs:
 
 <script src="all-songs.js"></script>
 <script src="draw-to-canvas.js"></script>
+
 
 		</body></html>
 
