--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	</head><body>
 			<div class="container">
-<div id="main-div">
+<div id="left-column">
 
 	<!--
 		canvas1 similar shirt riffage
@@ -16,52 +16,22 @@
 <canvas id="canvas1" width="100%" height="250px" style="border:1px solid #c3c3c3;"></canvas>
 <!-- /canvas for similar shirt riff -->
 
-<!-- calendar-->
-<div class="accent-div">
-    <h3>calendar in reverse chronological order</h3>
-  <div class="band-calendar">
-<div>October 30th</div>
-<div>ZOMBIE BALL, mirkwood, Arlington</div>
-
-<div>Oct 9th</div>
-<div>lucky dime, everett, w/ "the low hums"</div>
-
-<div>Sept 11th</div>
-<div>fisherman's village, everett</div>
-
-<div>Sept 10th</div>
-<div>Jam revival, 7.30-8.30pm, Carnation</div>
-
-<div>Aug 28th</div>
-<div>beerfest, outdoor</div>
-
-<div>*Aug 21st (private)</div>
-<div>Jeremy playing with himself, granite falls</div>
-   
-
-<div>July 31st</div>
-<div>Southside social, Concrete<ul>
-    <li>jeremy arrive 3pm</li>
-    <li>band show up by 7pm</li>
-  </ul></div>
-
-<div>July 30th</div>
-<div>BRODIEnation, Carnation<ul>
-    <li>jeremy arrive 3pm</li>
-    <li>band show up by 7pm</li>
-  </ul></div>
-
-<div>July 17th</div>
-<div>Shedfest, stanwood</div>
-
-  </div><!-- div.band-calendar -->
-    </div><!-- div.accent-div -->
+<h3>set list for Friday 8/6/2021 in Darrington:</h3>
+<div class="set-list">
+<div></div><div></div>
+<div></div><div></div>
 
 
-<p>Jeremy out of town sunday morning to thursday
-morning. 7/25 - 7/29</p><hr>
 
-                    <div class="accent-div">
+
+
+
+
+
+
+
+
+</div>
 
   <h3>__ setlist for 7/30 and 7/31 as of 7/29/2021</h3>
   <div class="set-list">
@@ -102,11 +72,9 @@ morning. 7/25 - 7/29</p><hr>
 <li>Long way down</li>
   </ul>
 
-                    </div><!-- div.accent-div -->
 
-    <div class="accent-div">
-<h3>__setlist for shedfest</h3>
-<div class="set-list">
+  <h3>__setlist for shedfest</h3>
+    <div class="set-list">
 <div>similar shirt    </div><div>A            </div>
 <div>halfstep trills  </div><div>G/Gm dorian  </div>
 <div>jester           </div><div>Bm           </div>
@@ -117,9 +85,8 @@ morning. 7/25 - 7/29</p><hr>
 <div>sillyclone       </div><div>C            </div>
 <div>little haze      </div><div>E dorian     </div>
 <div>long way down    </div><div>Dm           </div>
-</div><!-- div.set-list -->
-    </div><!-- div.accent-div -->
-
+    </div><!-- div.set-list -->
+  
 Psalm 23<br>
 Luther Bibel 1545<br>
 23 (Ein Psalm Davids.)
@@ -195,13 +162,50 @@ last sail                      A, F#m dorian<br>
 <br>
 you are beautiful
 
-        </div><!-- div#main-div -->
+        </div><!-- div#left-column -->
         
 
 
-        <div id="charts-div">
+        <div id="right-column">
+		<h3>band claendar</h3>
+<div class="band-calendar">
+<div>October 30th</div>
+<div>ZOMBIE BALL, mirkwood, Arlington</div>
 
-Here I will add charts for all songs:
+<div>Oct 9th</div>
+<div>lucky dime, everett, w/ "the low hums"</div>
+
+<div>Sept 11th</div>
+<div>fisherman's village, everett</div>
+
+<div>Sept 10th</div>
+<div>Jam revival, 7.30-8.30pm, Carnation</div>
+
+<div>Aug 28th</div>
+<div>beerfest, outdoor</div>
+
+<div>*Aug 21st (private)</div>
+<div>Jeremy playing with himself, granite falls</div>
+
+<div>Aug 6th Friday</div>
+<div>Darrington</div>
+
+<div>July 31st</div>
+<div>Southside social, Concrete
+<ul><li>jeremy arrive 3pm</li>
+<li>band show up by 7pmM</li></ul></div>
+
+<div>July 30th</div>
+<div>BRODIEnation, Carnation
+<ul><li>jeremy arrive 3pm</li>
+<li>band show up by 7pm</li></ul></div>
+
+<div>July 17th</div>
+<div>Shedfest, stanwood</div>
+
+</div><!-- /div.band-calendar -->
+
+<h3>charts for all songs:</h3>
 <ul>
   <li><a href="charts/halfstep-trills.html">
     halfstep trills</a></li>
@@ -211,73 +215,10 @@ Here I will add charts for all songs:
     keep me hangin on</a></li>
 </ul>
 
-  <div class="band-member-song-mastery-chart">
-	  <h3>This is the Band-Member-Song-Mastery-Chart
-	where we each give ourself a grade on our mastery
-	of every song and then we grade the whole band on
-	the band's mastery of each song.</h3>
-	  <!-- title key jeremy aaron sean ty -->
-<div>title</div>          <div>key</div><div>band</div><div>jeremy</div><div>aaron</div><div>sean</div><div>ty</div>
-
-<div>halfstep trills</div><div>G</div>  <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
-
-<div>Similar Shirt</div>  <div>A</div>  <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
-
-<div>Supercloud</div>     <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
-
-<div>Little Haze</div>    <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
-
-<div>Keep Me Hangin</div> <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
-
-<div>Circles</div>        <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
-
-<div>Jester</div>         <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
-
-<div>Grayscale</div>      <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
-
-<div>Heaven and</div>     <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
-
-<div>Glass Castles</div>  <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
-
-<div>Shadowdance</div>    <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
-
-<div>Sillyclone</div>     <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
-
-<div>Long Way Down</div>  <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
-
-<div>Jester</div>         <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
-
-<div>Jester</div>         <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
-
-<div>Jester</div>         <div></div>   <div>A+</div>  <div>A+</div>    <div>A+</div>   <div>A+</div>  <div>A+</div>
 
 
 
-<!--
-<div>1 similar</div><div></div>
-<div>2 halstep trills</div><div></div>
-<div>3 circles</div><div></div>
-<div>4 jester</div><div></div>
-<div>5 wildcard</div><div></div>
-<div>6 supercloud</div><div></div>
-<div>7 grayscale</div><div></div>
-<div>8 heaven (skit) we become dinosaurs</div><div></div>
-<div>9 glass castles</div><div></div>
-<div>10 shadow danve</div><div></div>
-<div>11 sillyclone</div><div></div>
-<div>12 keep me hangin</div><div></div>
-<div>13 little haze</div><div></div>
-<div>14 long way down</div><div></div>
-
--->
-
-
-  </div><!-- div.band-member-song-mastery-chart -->
-
-
-
-
-      </div><!-- div#charts-div -->
+      </div><!-- div#right-column -->
             </div><!-- div.container -->
 
 
