--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ last sail                      A, F#m dorian<br>
 <div>Sept 10th</div>
 <div>Jam revival, 7.30-8.30pm, Carnation</div>
 
-<div>Aug 28th</div>
+<div>Saturday Aug 28th (possibly friday Aug 27th)</div>
 <div>beerfest, outdoor</div>
 
 <div>*Aug 21st (private)</div>
