--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	</head><body>
 			<div class="container">
-
+<div><!-- left column -->
 
 	<!--
 		canvas1 similar shirt -->
@@ -172,8 +172,10 @@ last sail                      A, F#m dorian<br>
 <br>
 <br>
 <br>
+</div><!-- /left column -->
+<div><!-- right column -->
 
-        
+
 		<h3>band claendar</h3>
 <div class="band-calendar">
 <div>October 30th</div>
@@ -188,7 +190,7 @@ last sail                      A, F#m dorian<br>
 <div>Sept 10th</div>
 <div>Jam revival, 7.30-8.30pm, Carnation</div>
 
-<div>Saturday Aug 28th (possibly friday Aug 27th)</div>
+<div>Aug 28th</div>
 <div>beerfest, outdoor</div>
 
 <div>*Aug 21st (private)</div>
@@ -211,22 +213,8 @@ last sail                      A, F#m dorian<br>
 <div>Shedfest, stanwood</div>
 
 </div><!-- /div.band-calendar -->
-
-<h3>charts for all songs:</h3>
-<ul>
-  <li><a href="charts/halfstep-trills.html">
-    halfstep trills</a></li>
-  <li><a href="charts/last-sail.html">
-    last sail</a></li>
-  <li><a href="charts/keep-me-hangin-on.html">
-    keep me hangin on</a></li>
-</ul>
-
-
-
-
-      
-            </div><!-- div.container -->
+</div><!-- /right column -->
+</div><!-- /div.container -->
 
 
 
