--- a/index.html
+++ b/index.html
@@ -212,6 +212,8 @@ last sail                      A, F#m dorian<br>
 <div>Shedfest, stanwood</div>
 
 </div><!-- /div.band-calendar -->
+<hr><hr><hr><hr><hr><hr><hr>
+steyel baynes
 </div><!-- /right column -->
 </div><!-- /div.container -->
 
