adding similar shirt riff

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
         <html><head>
 <link rel="stylesheet" type="text/css" href="styles/style.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="https://github.com/hendorism/musicnotes/blob/master/js/draw_music_symbols_v0019.js"></script>
+<!-- <script src="https://github.com/hendorism/musicnotes/blob/master/js/draw_music_symbols_v0019.js"></script> -->
 
 	</head><body>
 			<div class="container">
@@ -13,9 +13,8 @@
 		multiple canvases in one page.
 	-->
 
-<canvas id="canvas1" width="100%" height="250px" style="border:1px solid #c3c3c3;"></canvas>
+<canvas id="canvas1" width="500px" height="250px" style="border:1px solid #c3c3c3;"></canvas>
 <!-- /canvas for similar shirt riff -->
-
 
   <h3>__ setlist for 7/30 and 7/31 as of 7/29/2021</h3>
   <div class="set-list">
@@ -219,6 +218,7 @@ you are beautiful
 
 
 <script src="all-songs.js"></script>
+<script src="music-symbols.js"></script>
 <script src="draw-to-canvas.js"></script>
 
 
