--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-        <html><head>
+
+
+
+<html><head>
 <link rel="stylesheet" type="text/css" href="styles/style.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <!-- <script src="https://github.com/hendorism/musicnotes/blob/master/js/draw_music_symbols_v0019.js"></script> -->
@@ -30,9 +33,9 @@
 	<li>glass castles</li>
 	<li>long way down</li>
 	<li><h3>songz we gon' learn:</h3></li>
-	<li>idk</li>
-	<li>idk</li>
-	<li>idk</li>
+	<li>reptilian blink/full flavor vibrations</li>
+	<li></li>
+	<li></li>
 	<li></li>
 	<li></li>
 	<li></li>
