--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 	<li>long way down</li>
 	<li><h3>songz we gon' learn:</h3></li>
 	<li>reptilian blink/full flavor vibrations</li>
-	<li></li>
-	<li></li>
+	<li>the love trap</li>
+	<li>word's sexiest troglodyte</li>
 	<li></li>
 	<li></li>
 	<li></li>
@@ -194,7 +194,7 @@ last sail                      A, F#m dorian<br>
 <div>Jam revival, 7.30-8.30pm, Carnation</div>
 
 <div>Aug 28th</div>
-<div>beerfest, outdoor</div>
+<div>beerfest, outdoor, downtown everett</div>
 
 <div>*Aug 21st (private)</div>
 <div>Jeremy playing with himself, granite falls</div>
