--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 	<li>we can move heaven and earth</li>
 	<li>glass castles</li>
 	<li>long way down</li>
+	<li>one and done</li>
+	<li>reptilian</li>
 	<li><h3>songz we gon' learn:</h3></li>
 	<li>reptilian blink/full flavor vibrations</li>
 	<li>the love trap</li>
@@ -181,23 +183,26 @@ last sail                      A, F#m dorian<br>
 
 		<h3>band claendar</h3>
 <div class="band-calendar">
-<div>October 30th</div>
+<div>Saturday October 30th</div>
 <div>ZOMBIE BALL, mirkwood, Arlington</div>
 
-<div>Oct 9th</div>
+<div>Saturday Oct 9th</div>
 <div>lucky dime, everett, w/ "the low hums"</div>
 
-<div>Sept 11th</div>
+<div>Saturday Sept 11th</div>
 <div>fisherman's village, everett</div>
 
-<div>Sept 10th</div>
+<div>Friday Sept 10th</div>
 <div>Jam revival, 7.30-8.30pm, Carnation</div>
 
-<div>Aug 28th</div>
+<div>Saturday Aug 28th</div>
 <div>beerfest, outdoor, downtown everett</div>
 
-<div>*Aug 21st (private)</div>
+<div>Saturday *Aug 21st (private)</div>
 <div>Jeremy playing with himself, granite falls</div>
+
+<div>Friday Aug 20th jeremy solo</div>
+<div>Friday Harbor, San Juan Island - 10am Anacortes ferry</div>
 
 <div>Aug 6th Friday</div>
 <div>Darrington</div>
