--- a/index.html
+++ b/index.html
@@ -196,7 +196,9 @@ last sail                      A, F#m dorian<br>
 <div>Jam revival, 7.30-8.30pm, Carnation</div>
 
 <div>Saturday Aug 28th</div>
-<div>beerfest, outdoor, downtown everett</div>
+<div>beerfest, outdoor, downtown everett
+	<br>4 ish bands,
+	<br>daytime</div>
 
 <div>Saturday *Aug 21st (private)</div>
 <div>Jeremy playing with himself, granite falls</div>
