--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <canvas id="canvas1" width="500px" height="250px" style="border:1px solid #c3c3c3;"></canvas>
 <!-- /canvas for similar shirt riff -->
 
+<canvas id="canvas2" width="500px" height="250px" style="border:1px solid #c3c3c3;"></canvas>
+
+
 <h3>all de songs we knowes:</h3>
 <ul>
 	<li>halfstep trills</li>
