--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 	<li>glass castles</li>
 	<li>long way down</li>
 	<li>one and done</li>
-	<li>reptilian</li>
-	<li><h3>songz we gon' learn:</h3></li>
+	<li>reptilian blink/full flavor vibrations</li></ul>
+<h3>songz we gon' learn:</h3>
+<ul>
 	<li>reptilian blink/full flavor vibrations</li>
 	<li>the love trap</li>
 	<li>word's sexiest troglodyte</li>
