--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 <canvas id="canvas2" width="500px" height="250px" style="border:1px solid #c3c3c3;"></canvas>
 
+<a href="jeremy_msg_2021-08-13.txt">a message from
+our fearless leader on 8/13/2021</a>
 
 <h3>all de songs we knowes:</h3>
 <ul>
