--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ our fearless leader on 8/13/2021</a>
 	<li>reptilian blink/full flavor vibrations</li>
 	<li>the love trap</li>
 	<li>word's sexiest troglodyte</li>
-	<li></li>
-	<li></li>
+	<li>diamond trees</li>
+	<li>the indigo room</li>
 	<li></li>
 	<li></li>
 	<li></li>
