--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 our fearless leader on 8/13/2021</a>
 <br><br>
 
+<a href="20210815-message_from_aaron.txt">A highly
+important message from your keyboardist/flutist,
+Aaron Dull</a>
+<br><br>
+
 <h3>all de songs we knowes:</h3>
 <ul>
 	<li>halfstep trills</li>
