--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@ last sail                      A, F#m dorian<br>
 <br>
 <br>
 <br>
+<a href="page_filling_canvas.html">page_filling_canvas.html</a>
 <br>
 <br>
 <br>
