--- a/page_filling_canvas.html
+++ b/page_filling_canvas.html
@@ -26,7 +26,8 @@ para.appendChild(node);
 const element = document.getElementById("div1");
 element.appendChild(para);
 
-canvas1_top-margin = 30;
+canvas1_topMargin = 30;
+console.log(canvas1_topMargin);
 drawLine(10, 30, 10, 70);
 
 </script></body></html>
