--- a/index.html
+++ b/index.html
@@ -302,12 +302,12 @@ drawLine(80, 30+00, 80, 30+40, ctx1); // m2
 drawEigthRest(85, 30+15, 1, ctx1);
 drawNoteHead(105, 30+05, ctx1);
 drawLine(105+3, 30+05, 105+3, 30-20, ctx1);
-drawFlags(105+3, 30-20, 2, 1, 1, ctx1);
+drawFlags(105+3, 30-20, 2, 1, ctx1);
 
 drawEigthRest(115, 30+15, 1, ctx1);
 drawNoteHead(135, 30+05, ctx1);
 drawLine(135+3, 30+05, 135+3, 30-20, ctx1);
-drawFlags(135+3, 30-20, 2, 1, 1, ctx1);
+drawFlags(135+3, 30-20, 2, 1, ctx1);
 
 
 drawNoteHead(145, 30+00, ctx1);
