--- a/index.html
+++ b/index.html
@@ -303,13 +303,13 @@ drawLine(85, 30+00, 85, 30+40, ctx1); // m2
 drawEigthRest(90, 30+15, 1, ctx1);
 drawNoteHead(105, 30+05, ctx1);
 drawLine(105+3, 30+05, 105+3, 30-20, ctx1);
-drawFlags(105+3, 30-20, 2, 1, ctx1);
+drawFlags(105+3, 30-20, 1, 1, ctx1);
 
 // 2
 drawEigthRest(115, 30+15, 1, ctx1);
 drawNoteHead(135, 30+05, ctx1);
 drawLine(135+3, 30+05, 135+3, 30-20, ctx1);
-drawFlags(135+3, 30-20, 2, 1, ctx1);
+drawFlags(135+3, 30-20, 1, 1, ctx1);
 
 // 3, 4
 drawNoteHead(145, 30+00, ctx1);
@@ -324,8 +324,20 @@ crossBeams(145+3, 30-20, 175+3, 30-20, 1, 5, ctx1);
 
 drawLine(182, 30+00, 182, 30+40, ctx1); // m3
 
-drawQuarterRest(190, 30+25, ctx1);
+// 1
+drawQuarterRest(195, 30+25, ctx1);
 
+// 2
+drawNoteHead(205+00, 30-10, ctx1); // A5
+drawNoteHead(205+03, 30-00, ctx1); // F5 #
+drawNoteHead(205+00, 30+05, ctx1); // E5
+drawNoteHead(205+00, 30+15, ctx1); // C5 #
+drawLine(205+3, 30+15, 205+03, 30-25, ctx1);
+//         //             //                //                //                //
+drawBezier(210, 30-10+00, 210+10, 30-10+07, 210+20, 30-10+07, 210+30, 30-10+00, ctx1);
+drawBezier(210, 30-00+00, 210+10, 30-00+07, 210+20, 30-00+07, 210+30, 30-00+00, ctx1);
+drawBezier(210, 30+05+00, 210+10, 30+05+07, 210+20, 30+05+07, 210+30, 30+05+00, ctx1);
+drawBezier(210, 30+15+00, 210+10, 30+15+07, 210+20, 30+15+07, 210+30, 30+15+00, ctx1);
 
 
 
