--- a/index.html
+++ b/index.html
@@ -300,16 +300,16 @@ crossBeams(45+3, 30-2, 75+3, 30-8, 1, 5, ctx1); // beat2
 drawLine(85, 30+00, 85, 30+40, ctx1); // m2
 
 // 1
-drawEigthRest(90, 30+15, 1, ctx1);
-drawNoteHead(105, 30+05, ctx1);
-drawLine(105+3, 30+05, 105+3, 30-20, ctx1);
-drawFlags(105+3, 30-20, 1, 1, ctx1);
+drawEigthRest( 090+0-00, 30+15, 1,                ctx1);
+drawNoteHead(  105+0-00, 30+05,                   ctx1);
+drawLine(      105+3-00, 30+05, 105+3-00, 30-20,  ctx1);
+drawFlags(     105+3-00, 30-20, 1, 1,             ctx1);
 
 // 2
-drawEigthRest(115, 30+15, 1, ctx1);
-drawNoteHead(135, 30+05, ctx1);
-drawLine(135+3, 30+05, 135+3, 30-20, ctx1);
-drawFlags(135+3, 30-20, 1, 1, ctx1);
+drawEigthRest( 115+0-00, 30+15, 1,                ctx1);
+drawNoteHead(  135+0-05, 30+05,                   ctx1);
+drawLine(      135+3-05, 30+05, 135+3-05, 30-20,  ctx1);
+drawFlags(     135+3-05, 30-20, 1, 1,             ctx1);
 
 // 3, 4
 drawNoteHead(145, 30+00, ctx1);
@@ -334,12 +334,22 @@ drawNoteHead(205+00, 30+05, ctx1); // E5
 drawNoteHead(205+00, 30+15, ctx1); // C5 #
 drawLine(205+3, 30+15, 205+03, 30-25, ctx1);
 //         //             //                //                //                //
-drawBezier(210, 30-10+00, 210+10, 30-10+07, 210+20, 30-10+07, 210+30, 30-10+00, ctx1);
-drawBezier(210, 30-00+00, 210+10, 30-00+07, 210+20, 30-00+07, 210+30, 30-00+00, ctx1);
-drawBezier(210, 30+05+00, 210+10, 30+05+07, 210+20, 30+05+07, 210+30, 30+05+00, ctx1);
-drawBezier(210, 30+15+00, 210+10, 30+15+07, 210+20, 30+15+07, 210+30, 30+15+00, ctx1);
+drawBezier(210, 30-10+00, 210+05, 30-10+07, 210+10, 30-10+07, 210+15, 30-10+00, ctx1);
+drawBezier(210, 30-00+00, 210+05, 30-00+07, 210+10, 30-00+07, 210+15, 30-00+00, ctx1);
+drawBezier(210, 30+05+00, 210+05, 30+05+07, 210+10, 30+05+07, 210+15, 30+05+00, ctx1);
+drawBezier(210, 30+15+00, 210+05, 30+15+07, 210+10, 30+15+07, 210+15, 30+15+00, ctx1);
 
-
+// 3
+function measureThreeBeatThree() {
+  let chordY = [30-10, 30+00, 30+05, 30+15];
+  for (i=0; i<chord.length; i++) {
+    let chordX = 230;
+    if (i === 1) {
+      chordX += 6;
+    }
+    drawNoteHead(chordX, chordY[i], ctx1);
+  }
+}
 
 
 
