--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-
+<!--
+  remember to "ctrl+F" search to "find in page" "this is my bookmark"
+  to find where you were working last.
+-->
 
 
 <html><head>
@@ -350,6 +353,22 @@ function measureThreeBeatThree() {
     drawNoteHead(chordX, chordY[i], ctx1);
   }
 }
+
+measureThreeBeatThree();
+
+
+
+// this is my bookmark.
+// when I need to find where I was working last,
+// I will ctrl+F to find in page and search for
+// "this is my bookmark"
+
+
+
+
+
+
+
 
 
 
