--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ drawBezier(210, 30+15+00, 210+05, 30+15+07, 210+10, 30+15+07, 210+15, 30+15+00, 
 // 3
 function measureThreeBeatThree() {
   let chordY = [30-10, 30+00, 30+05, 30+15];
-  for (i=0; i<chord.length; i++) {
+  for (i=0; i<chordY.length; i++) {
     let chordX = 230;
     if (i === 1) {
       chordX += 6;
