--- a/index.html
+++ b/index.html
@@ -320,11 +320,11 @@ drawNoteHead(155, 30-10, ctx1);
 drawLine(155-8, 30-10, 155+8, 30-10, ctx1);
 drawNoteHead(165, 30+00, ctx1);
 drawNoteHead(175, 30+05, ctx1);
-drawLine(145+3, 30+00, 145+3, 30-20, ctx1);
+drawLine(145+0, 30+00, 145+0, 30-20, ctx1);
 drawLine(155+3, 30-10, 155+3, 30-20, ctx1);
 drawLine(165+3, 30+00, 165+3, 30-20, ctx1);
 drawLine(175+3, 30+05, 175+3, 30-20, ctx1);
-crossBeams(145+3, 30-20, 175+3, 30-20, 1, 5, ctx1);
+crossBeams(145+0, 30-20, 175+3, 30-20, 1, 5, ctx1);
 
 drawLine(182, 30+00, 182, 30+40, ctx1); // m3
 
@@ -384,6 +384,9 @@ function secondInversionSeventhChord(xx, yy) {
 }
 
 secondInversionSeventhChord(230, 30+00);
+secondInversionSeventhChord(240, 30+00);
+secondInversionSeventhChord(250, 30+00);
+secondInversionSeventhChord(260, 30+00);
 
 /*
 function measureThreeBeatThree(a) {
