--- a/index.html
+++ b/index.html
@@ -385,7 +385,6 @@ function secondInversionSeventhChord(xx, yy, ctx) {
   }
 }
 
-	/*
 function strumAChord(x, y, ctx) {
   for (i=0; i<4; i++) {
     secondInversionSeventhChord(x+10*i, 30+y, ctx);
@@ -394,9 +393,8 @@ function strumAChord(x, y, ctx) {
     secondInversionSeventhChord(x+10*i, 30+y, ctx);
   }
 }
-/*
 	
-//strumAChord(230, 30, ctx);
+strumAChord(230, 30, ctx1);
 
 /*
 function measureThreeBeatThree(a) {
