--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ for (e=0; e<3; e++) {
     }
 }
 	
-//drawKeySignature(10, 30, 3, ctx);
+drawKeySignature(10, 30, 3, ctx);
 drawNoteHead(25, 30+25, ctx1); // A4   1-1-1/2
 drawLine(25+3, 30+25, 25+3, 30-5, ctx1);
 drawNoteHead(35, 30+25, ctx1); // A4   1-1-2/2
@@ -394,7 +394,7 @@ function strumAChord(x, y, ctx) {
   }
 }
 	
-strumAChord(230, 30, ctx1);
+strumAChord(230, 00, ctx1);
 
 /*
 function measureThreeBeatThree(a) {
